# incrust

./: .incrust_cache  CMakeLists.txt  README.md  compile_commands.json
demo_site/assets/css/: style.css
demo_site/content/: about.md  index.md
output/content/: about.html  index.html
output/templates/: base.html
src/: build_graph.hpp  build_graph_impl.hpp  build_node.hpp  file_watcher.hpp  hash_store.hpp  http_server.hpp  main.cpp  processor.cpp  processor.hpp  thread_pool.hpp
